fixed error page alignment by using :host

--- a/src/app/pages/error-page/error-page.component.css
+++ b/src/app/pages/error-page/error-page.component.css
@@ -1,12 +1,14 @@
+:host {
+    display: flex;
+    flex: 1;
+}
+
 .error-page {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    flex: 1;
 }
 
 .error-page > * {
